--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,11 @@ a {
     color-scheme: dark;
   }
 } */
+
+#loading {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
